[package]
name = "ip_header"
version = "0.1.0"
edition = "2024"
default-run = "ip_header"
#build = "src/build.rs"

[dependencies]
pnet = "0.35.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3.7"
socket2 = { version = "0.6.0", features = ["all"] }